# my_physics_engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
app/: CMakeLists.txt  main.cpp  user_interface.cpp  user_interface.hpp
core/: CMakeLists.txt  app_config.hpp
engine/: CMakeLists.txt  body.cpp  body.hpp  circleShape.cpp  circleShape.hpp  constraint.hpp  distance_constraint.cpp  distance_constraint.hpp  rectangleShape.cpp  rectangleShape.hpp  shape.hpp  world.cpp  world.hpp
renderer/: CMakeLists.txt  rendererSFML.cpp  rendererSFML.hpp
simulations/: CMakeLists.txt  simulation.hpp
simulations/bouncing_ball/: CMakeLists.txt  bouncing_ball.cpp  bouncing_ball.hpp
simulations/floating_balls/: CMakeLists.txt  floating_balls.cpp  floating_balls.hpp
simulations/pendulum/: CMakeLists.txt  pendulum.cpp  pendulum.hpp
simulations/test_sim/: CMakeLists.txt  test_sim.cpp  test_sim.hpp
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt  test_body.cpp  test_world.cpp
tests/renderer/: CMakeLists.txt  test_rendererSFML.cpp
